# TMQGP

./: .gitignore  CMakeLists.txt  DirectUse.cpp  README.md  compile_commands.json  std_function.i  tmqgp_mpi.cpp  wrap.i
FromZhanduo/: CompareZhanduo-BB.ipynb  CompareZhanduo.ipynb  Untitled.ipynb  Untitled_bup.ipynb
FromZhanduo/Thermo/: CompareThermo.ipynb  CompareThermo_2.ipynb
Py_files/: Quark Loops.ipynb  Thermal_calc.ipynb
TMQGP/: G2.cpp  G2.h  IntGSL.cpp  IntGSL.h  Integrator.h  Interpolator.cpp  Interpolator.h  Particle.cpp  Particle.h  SigmaGSL.cpp  SigmaGSL.h  SigmaInt.cpp  SigmaInt.h  SigmaProd.cpp  SigmaProd.h  SigmaQP.cpp  SigmaQP.h  Sigma_Efirst.cpp  Sigma_Efirst.h  Thermo.cpp  Thermo.h  Tmatrix.cpp  Tmatrix.h  mp.cpp  mp.h  temp.cpp  temp.h
ipy/Loops/: Untitled.ipynb
ipy/Quasiparticle/: CheckBorn.ipynb  CheckEfirst.ipynb  CheckImTM.ipynb  CheckIterations.ipynb  CheckRepulsiveChannels.ipynb  ConvolutionIntegral.ipynb  GaussianSF.ipynb  ImS_test.ipynb  IterOnce.ipynb  IterOnce_Mu0.ipynb  IterationScript.ipynb  IterationScript_4ch.ipynb  IterationSolveSpectra.ipynb  Iterations.ipynb  Iterations_Q.ipynb  Iterations_QA.ipynb  Iterations_QA_Trange.ipynb  Iterations_QA_Trange_musigma.ipynb  Iterations_QA_Trange_solve.ipynb  Iterations_QA_cycle.ipynb  Iterations_QA_solve.ipynb  PoleAwareIntegration.ipynb  PoleAwareTM.ipynb  QP_ImS.ipynb  ReS_QP.ipynb  TestEfirst.ipynb  TestThermo.ipynb  Untitled.ipynb  Untitled1.ipynb
ipy/TMQGP/: testMinusSign.ipynb  testRelativisticFactors.ipynb
ipy/TMQGP/rho/: testPVformula.ipynb  testResonance-Copy1.ipynb  testResonance.ipynb
ipy/TMQGP/run/: IterateG_plots.ipynb  IterateMultiChannels-Parallel.ipynb  ParallelDump_Q-Copy1.ipynb  ParallelDump_Q.ipynb  ParallelDump_Q_lambda.ipynb  compare_LO_efirst.ipynb  testRunWithFF.ipynb
ipy/TMQGP/run/2ch/: compareSF.ipynb
ipy/TMQGP/run/rho/: testResonance-Copy1.ipynb  testResonanceByHand.ipynb
ipy/TMQGP/run/run_delta/chi2_adaptive/: get_deriv.py
ipy/TMQGP/run/run_delta/fitted/mu0/: assemble.py
ipy/TMQGP/run/run_delta/fitted/mu1/: assemble.py  process_mu.py
ipy/TMQGP/run/run_delta/fitted_lo/: get_deriv.py
ipy/TMQGP/run/run_delta/mu0/: assemble.py
ipy/TMQGP/run/run_delta/mu01/: assemble.py
ipy/TMQGP/run/run_delta/mu0_fin/: fix_data.py
ipy/TMQGP/run/run_delta/mu1_hd/: assemble.py
ipy/TMQGP/run/run_delta/mu1_lo/: assemble.py
ipy/TMQGP/run/run_delta/try_fit/: assemble.py
ipy/TMQGP/run/run_new/fit_MQ_LO/: get_deriv.py
ipy/TMQGP/run/run_new/lowmass_fit/: process_fit.py
ipy/TMQGP/test/: CheckSusceptibility.ipynb  Compare12poles.ipynb  FixTMCoeff.ipynb  OnshellSigma.ipynb  PhiQG.ipynb  TestReT.ipynb  ThermoPlots.ipynb  TryThermo_QP.ipynb  TryThermo_Sigma.ipynb  VacuumProps.ipynb  testAntisymm.ipynb  testChannelMultiL.ipynb  testImS.ipynb  testMinusSign.ipynb  testNewNorm.ipynb  testParallelChannel.ipynb  testPopulateT_with_X.ipynb  testRelativisticFactors.ipynb  testTmatrix_GG.ipynb  testXsolve.ipynb  test_MPImap.ipynb  tryPhiQG.ipynb  tryPhiQuarks.ipynb  tryPhiQuarks_lambda-Copy1.ipynb  tryPhiQuarks_lambda.ipynb
ipy/TMQGP/test/Expand/: CompareIterationsExpand.ipynb  Untitled.ipynb  testMu.ipynb
ipy/TMQGP/test/FitChi2/: CompareNegMu.ipynb  Compare_HI_XHI-Copy1.ipynb  Compare_HI_XHI.ipynb  Compare_HI_XHI_mu.ipynb  FitChi2.ipynb  Untitled.ipynb
ipy/TMQGP/test/G2/: CompareG2.ipynb  FixPeaksAndWidth.ipynb  GFInterpolator_test.ipynb  ImG2_pole.ipynb  testSigmaNewT.ipynb
ipy/TMQGP/test/InspectIterations/: InspectMu.ipynb  PlotIterations.ipynb  PlotNewFit.ipynb  ScriptPlots.ipynb  ScriptPlots_mu.ipynb  Thermo.ipynb  Untitled.ipynb  compareHD.ipynb  compareHD_plotP.ipynb
ipy/TMQGP/test/InspectIterations/TestMu0/: PlotMorePrec.ipynb  TestSF.ipynb
ipy/TMQGP/test/InspectIterations/fitted_lo/: assemble.py
ipy/TMQGP/test/InspectIterations/lower_g1/: Untitled.ipynb
ipy/TMQGP/test/InspectIterations/mu-1/: CheckNegMu.ipynb
ipy/TMQGP/test/Multiprocessing/: Untitled.ipynb  testMP.ipynb
ipy/TMQGP/test/PartialWaves/: TestVl.ipynb  Untitled.ipynb  first_try.ipynb
ipy/TMQGP/test/PassMultipleTmatrices/: FirstTry.ipynb
ipy/TMQGP/test/QG_Channels/: CompareZhanduo.ipynb  PlayWithRun-MultiChannel.ipynb  PlayWithRun.ipynb  PlotL1.ipynb  PlotParamsScan.ipynb  RunChGroup.ipynb  RunParamsScan.ipynb  RunParamsScan_L.ipynb  RunT.ipynb  RunT_4integ.ipynb  TryThermo.ipynb  TryThermoL1.ipynb  Untitled.ipynb  test2PPropNormalization.ipynb  testChannelGroup.ipynb  testGluonBinding.ipynb
ipy/TMQGP/test/QG_Channels/GluonScaling/: HDF5_loader.ipynb  Plots.ipynb  Run.ipynb  Run_HDF5.ipynb  Run_HDF5_delta.ipynb  Run_Reshaped.ipynb  Thermo.ipynb  VacuumProps.ipynb  compareHD.ipynb  testReshape.ipynb
ipy/TMQGP/test/Susceptibility/: Untitled.ipynb
ipy/TMQGP/test/WigglesInT/: testWiggles.ipynb
py/: A part of me will always belong to you.  Assemble.py  Assemble_mu.py  Assemble_mu_2ch.py  Assemble_mu_4ch.py  Assemble_mu_4ch_test.py  FitFiniteMu.py  FitMQ.py  FitMQ_L06.py  FitMQ_lowmass.py  FitM_lowG.py  Get4Point.py  Get4Point_2ch_HI.py  Get4Point_4ch_HI.py  Get4Point_4ch_HI_efirst.py  Get4Point_4ch_LO.py  Get4Point_4ch_XHI.py  Get4Point_HI.py  Get4Point_HI_weak.py  GetFromFit_HI_txt.py  GetFromFit_HI_txt_weak.py  GetFromFit_LO_txt.py  GetMuFromFit.py  GetMuFromFit_0.py  GetMuFromFit_2ch.py  GetMuFromFit_2ch_old.py  GetMuFromFit_4ch.py  GetMuFromFit_4ch_HI.py  GetMuFromFit_4ch_HI_efirst.py  GetMuFromFit_4ch_LO.py  GetMuFromFit_4ch_LO_efirst.py  GetMuFromFit_4ch_XHI.py  GetMuFromFit_4ch_test.py  GetMuFromFit_HI.py  GetMuFromFit_HI_txt.py  GetMuFromFit_HI_txt_weak.py  GetMuFromFit_LO_txt.py  PT.csv_keep  PT_paper.txt  PlotSF.py  (+38 more)
